# django-responsediff

./: .gitignore  CHANGES.txt  MAINTENANCE.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
responsediff/: exceptions.py
responsediff/tests/: test_mixin.py  test_responsediff.py
responsediff/tests/project/: settings.py  urls.py
responsediff/tests/response_fixtures/: MixinTest.test_assertNoDiff.content  MixinTest.test_assertNoDiffSelector.content  MixinTest.test_assertNoDiffSelector_non_ascii.content  MixinTest.test_assertNoDiffSelector_non_ascii.metadata
