[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-responsediff"
version = "0.9.0"
description = "HTTP response diffing against fixtures for testing"
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "James Pic", email = "jamespic@gmail.com"}]
keywords = ["django", "test", "response", "fixture", "diff"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "html5lib",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "coverage",
]
lint = [
    "ruff",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourlabs/django-responsediff"

[tool.setuptools.packages.find]
include = ["responsediff*"]

[tool.setuptools.package-data]
"responsediff" = ["**/*.content", "**/*.metadata"]

[tool.ruff.lint]
select = ["E", "F", "W"]
